<resources>
    <string name="app_name">photoHosting</string>
    <string name="btn_login">Войти</string>
    <string name="btn_register">Зарегистрироваться</string>
    <string name="btn_next">Далее</string>
    <string name="btn_select">Выбрать</string>
    <string name="btn_upload">Загрузить</string>
    <string name="btn_download">Скачать</string>
    <string name="btn_delete">Удалить</string>
    <string name="auth">Авторизация</string>
    <string name="reg">Регистрация</string>
    <string name="tv_fileSize">Размер файла</string>
    <string name="tv_fileName">Имя файла</string>
    <string name="hint_pass">Пароль</string>
    <string name="hint_mail">Почта</string>
    <string name="hint_con_pass">Подтвердите пароль</string>
</resources>