<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".DownloadActivity">
    <Button
        android:id="@+id/btnList"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_filterlist"
        />

    <ImageView
        android:id="@+id/imageUpload"
        android:layout_width="240dp"
        android:layout_height="427dp"
        app:layout_constraintBottom_toTopOf="@id/btnPlaceUpload"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/imageName"
        android:textColor="@color/white"
        android:text="@string/tv_fileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageUpload"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginHorizontal="20dp"/>
    <TextView
        android:id="@+id/imageSize"
        android:textColor="@color/white"
        android:text="@string/tv_fileSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageName"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginHorizontal="20dp"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnPlaceUpload"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnSelect"
            style="@style/whiteStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/btn_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnUpload"
            style="@style/blackStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/btn_download"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>